tests/build/cases/impl_ui_node/delegate_iter_no_children_field.stderr
error[E0609]: no field `children` on type `&Node`
 --> cases/impl_ui_node/delegate_iter_no_children_field.rs:5:16
  |
5 | #[impl_ui_node(children_iter)]
  |                ^^^^^^^^^^^^^ unknown field

error[E0609]: no field `children` on type `&mut Node`
 --> cases/impl_ui_node/delegate_iter_no_children_field.rs:5:16
  |
5 | #[impl_ui_node(children_iter)]
  |                ^^^^^^^^^^^^^ unknown field
